--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-image-cropper-facet",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "An image cropper for Angular",
   "main": "./bundles/ngx-image-cropper.umd.js",
   "module": "./ngx-image-cropper/ngx-image-cropper.es5.js",
@@ -35,14 +35,14 @@
     "@angular/platform-browser": "^2.4.0 || ^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^5.2.7",
-    "@angular/compiler": "^5.2.7",
-    "@angular/compiler-cli": "^5.2.7",
-    "@angular/core": "^5.2.7",
-    "@angular/platform-browser": "^5.2.7",
+    "@angular/common": "5.2.10",
+    "@angular/compiler": "5.2.10",
+    "@angular/compiler-cli": "5.2.10",
+    "@angular/core": "5.2.10",
+    "@angular/platform-browser": "5.2.10",
     "ng-packagr": "^1.2.0",
-    "rxjs": "5.5.2",
-    "typescript": "2.4.2",
-    "zone.js": "0.8.14"
+    "rxjs": "5.5.10",
+    "typescript": "2.7.2",
+    "zone.js": "0.8.26"
   }
 }
